<resources>
    <string name="app_name">Anochat</string>

    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>


    <string name="login_email">email</string>
    <string name="login_password">password</string>
    <string name="wrong_password">Wrong password</string>
    <string name="register_failed">Register failed</string>
    <string name="user_name">user name</string>
    <string name="send_media_image">Send image</string>
    <string name="send_media_video">Send video</string>
    <string name="search">Search</string>
    <string name="search_phone_placeholder">Find friend</string>
    <string name="sign_up">Sign up</string>
    <string name="select_file">Select a File to Upload</string>
    <string name="enter_message">Enter text</string>
    <string name="selected_image">selected_image</string>
    <string name="audio_message">Audio message:</string>
    <string name="settings">Settings</string>
    <string name="no_status">No status</string>
    <string name="enter_new_name">Enter new name</string>
    <string name="enter_new_status">Enter new status</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="notifications">Notifications</string>
    <string name="sound">Sound</string>
    <string name="vibration">Vibration</string>
    <string name="sign_out">Sign out</string>
    <string name="phone_number">phone number</string>
    <string name="verification_code">verification code</string>
    <string name="invalid_verification_code">invalid verification code</string>
    <string name="contacts">Contacts</string>
    <string name="sign_in">Sign in</string>
    <string name="set_avatar">Set avatar</string>
    <string name="save_to_gallery">Save photos to gallery</string>
    <string name="menu_share">Share</string>
    <string name="share_image">Share image</string>
    <string name="open_video">Open video</string>
    <string name="status_online">online</string>
    <string name="status_typing">typing…</string>
    <string name="too_large_file">Too large file</string>
    <string name="video_is_processing">Video is processing</string>


    <string name="enter_valid_phone">Enter valid phone number</string>
    <string name="empty_code">Empty code</string>
    <string name="wrong_code">Wrong code</string>
    <string name="wrong_phone">Wrong phone number format</string>
    <string name="no_connection">No connection</string>
    <string name="delete">Delete</string>
    <string name="reply">Reply</string>
    <string name="copy">Copy</string>
    <string name="copied">Text copied</string>

    <string name="privacy_policy">Privacy Policy</string>
    <string name="privacy_policy_url">https://bogomolovaa.github.io/Anochat/</string>



</resources>
