<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/nav_graph.xml"
        app:startDestination="@id/conversationsListFragment">

    <fragment
            android:id="@+id/conversationFragment"
            android:name="bogomolov.aa.anochat.view.fragments.ConversationFragment">
        <action
                android:id="@+id/action_conversationFragment_to_sendMediaFragment"
                app:destination="@id/sendMediaFragment" />
        <action
                android:id="@+id/action_conversationFragment_to_userViewFragment"
                app:destination="@id/userViewFragment" />
    </fragment>
    <fragment
            android:id="@+id/conversationsListFragment"
            android:name="bogomolov.aa.anochat.view.fragments.ConversationsListFragment"
            android:label="Anochat">
        <action
                android:id="@+id/action_conversationsListFragment_to_conversationFragment"
                app:destination="@id/conversationFragment" />
        <action
                android:id="@+id/action_conversationsListFragment_to_usersFragment"
                app:destination="@id/usersFragment" />
        <action
                android:id="@+id/action_conversationsListFragment_to_settingsFragment"
                app:destination="@id/settingsFragment" />
        <action
                android:id="@+id/action_conversationsListFragment_to_messageSearchFragment"
                app:destination="@id/messageSearchFragment" />
    </fragment>
    <fragment
            android:id="@+id/usersFragment"
            android:name="bogomolov.aa.anochat.view.fragments.UsersFragment"
            android:label="@string/contacts" />
    <fragment
            android:id="@+id/signInFragment"
            android:name="bogomolov.aa.anochat.view.fragments.SignInFragment"
            android:label="@string/sign_in"
            tools:layout="@layout/fragment_sign_in">
        <action
                android:id="@+id/action_signInFragment_to_conversationsListFragment"
                app:destination="@id/conversationsListFragment"
                app:popUpTo="@+id/signInFragment"
                app:popUpToInclusive="true" />
    </fragment>
    <fragment
            android:id="@+id/sendMediaFragment"
            android:name="bogomolov.aa.anochat.view.fragments.SendMediaFragment" />
    <fragment
            android:id="@+id/imageViewFragment"
            android:name="bogomolov.aa.anochat.view.fragments.ImageViewFragment" />
    <fragment
            android:id="@+id/settingsFragment"
            android:name="bogomolov.aa.anochat.view.fragments.SettingsFragment"
            android:label="@string/settings" >
        <action
                android:id="@+id/action_settingsFragment_to_miniatureFragment"
                app:destination="@id/miniatureFragment" />
    </fragment>
    <fragment
            android:id="@+id/userViewFragment"
            android:name="bogomolov.aa.anochat.view.fragments.UserViewFragment" />
    <fragment
            android:id="@+id/messageSearchFragment"
            android:name="bogomolov.aa.anochat.view.fragments.MessageSearchFragment"
            android:label="@string/search" />
    <fragment
            android:id="@+id/miniatureFragment"
            android:name="bogomolov.aa.anochat.view.fragments.MiniatureFragment"
            android:label="@string/set_avatar" />
</navigation>